ATUALIZAÇÂO - colocação de um botão paravoltar a página inicial

--- a/documentacao.html
+++ b/documentacao.html
@@ -6,31 +6,36 @@
   <link rel="stylesheet" href="style2.css">
 </head>
 <body>
- <aside>
-  <h2>Documentação</h2>
-  <details open class="folder">
-    <summary class="negrito">ADMINISTRADOR</summary>
+  <aside>
+    <h2>Documentação</h2>
+    <details open class="folder">
+      <summary class="negrito">ADMINISTRADOR</summary>
 
-    <details class="folder">
-      <summary>config</summary>
-      <div class="sub-item" data-id="navbar">NavBar</div>
-      <div class="sub-item" data-id="forms">Funcionalidades do Forms</div>
-    </details>
+      <details class="folder">
+        <summary>config</summary>
+        <div class="sub-item" data-id="navbar">NavBar</div>
+        <div class="sub-item" data-id="forms">Funcionalidades do Forms</div>
+      </details>
 
-    <details class="folder">
-      <summary>turma</summary>
-      <div class="sub-item" data-id="turma-cadastrar">Cadastrar</div>
-      <div class="sub-item" data-id="turma-remover">Remover</div>
-      <div class="sub-item" data-id="turma-atualizar">Atualizar</div>
-    </details>
+      <details class="folder">
+        <summary>turma</summary>
+        <div class="sub-item" data-id="turma-cadastrar">Cadastrar</div>
+        <div class="sub-item" data-id="turma-remover">Remover</div>
+        <div class="sub-item" data-id="turma-atualizar">Atualizar</div>
+      </details>
 
-    <details class="folder">
-      <summary>Gerenciar Perfis</summary>
-      <div class="sub-item" data-id="perfil-editor">Adicionar outro perfil como editor</div>
-      <div class="sub-item" data-id="perfil-visu">Adicionar visualizador de planilhas</div>
+      <details class="folder">
+        <summary>Gerenciar Perfis</summary>
+        <div class="sub-item" data-id="perfil-editor">Adicionar outro perfil como editor</div>
+        <div class="sub-item" data-id="perfil-visu">Adicionar visualizador de planilhas</div>
+      </details>
     </details>
-  </details>
-</aside>
+  </aside>
+
+  <!-- BOTÃO DE VOLTAR -->
+  <div style="margin: 1rem;">
+    <a href="index.html" class="botao-voltar">← Voltar à Página Inicial</a>
+  </div>
 
   <main id="conteudo">
     <h1>Bem-vindo</h1>
