--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Doc AulaSys - Tela Inicial</title>
+  <title>SystemIN - Tela Inicial</title>
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 
   <!-- TELA INICIAL -->
   <section id="hero">
-    <h1>Doc AulaSys</h1>
+    <h1>Systemin Info</h1>
     <p>Descubra todas as funcionalidades do sistema de registro de aulas e presença</p>
     <a href="#doc-card" class="scroll-down" aria-label="Scroll down"></a>
   </section>
