atualizações de paginas e criação de novas fonções do código

--- a/index.html
+++ b/index.html
@@ -4,28 +4,123 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SystemIN - Tela Inicial</title>
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="style1.css" />
 </head>
 <body>
 
-  <!-- LOGO girando ao fundo -->
-  <div id="background-logo">
-    <img src="logo.png" alt="Logo do sistema" />
+  <!-- LOGOS GIRANDO AO FUNDO -->
+  <div class="floating-logos">
+    <!-- 14 logos com diferentes delays -->
+    <img src="logo.png" class="floating-logo" style="--i: 1;" />
+    <img src="logo.png" class="floating-logo" style="--i: 2;" />
+    <img src="logo.png" class="floating-logo" style="--i: 3;" />
+    <img src="logo.png" class="floating-logo" style="--i: 4;" />
+    <img src="logo.png" class="floating-logo" style="--i: 5;" />
+    <img src="logo.png" class="floating-logo" style="--i: 6;" />
+    <img src="logo.png" class="floating-logo" style="--i: 7;" />
+    <img src="logo.png" class="floating-logo" style="--i: 8;" />
+    <img src="logo.png" class="floating-logo" style="--i: 9;" />
+    <img src="logo.png" class="floating-logo" style="--i: 10;" />
+    <img src="logo.png" class="floating-logo" style="--i: 11;" />
+    <img src="logo.png" class="floating-logo" style="--i: 12;" />
+    <img src="logo.png" class="floating-logo" style="--i: 13;" />
+    <img src="logo.png" class="floating-logo" style="--i: 14;" />
   </div>
 
-  <!-- TELA INICIAL -->
-  <section id="hero">
-    <h1>Systemin Info</h1>
-    <p>Descubra todas as funcionalidades do sistema de registro de aulas e presença</p>
-    <a href="#doc-card" class="scroll-down" aria-label="Scroll down"></a>
-  </section>
+  <!-- CONTEÚDO PRINCIPAL -->
+  <div class="conteudo-principal">
 
-  <!-- CARD COM LINK PARA DOCUMENTAÇÃO -->
-  <section id="doc-card">
-    <h2>Documentação Completa</h2>
-    <p>Clique no botão para acessar a documentação completa do sistema</p>
-    <button id="go-to-doc">Ir para Documentação</button>
-  </section>
+    <!-- TELA HERO -->
+    <section id="hero">
+      <h1>SystemIN Info</h1>
+      <p>Descubra todas as funcionalidades do sistema de registro de aulas e presença</p>
+      <a href="#doc-card" class="scroll-down" aria-label="Scroll down"></a>
+    </section>
+
+    <!-- NOVA SEÇÃO: DESENVOLVEDORES -->
+    <section id="developers" class="dev-section">
+  <h2 class="dev-title">Equipe de Desenvolvimento</h2>
+
+  <div class="carousel-container">
+    <button class="carousel-btn prev" aria-label="Anterior">&#8592;</button>
+
+    <div class="carousel-track-container">
+      <ul class="carousel-track">
+        <!-- Slide 1 - Paulo -->
+        <li class="carousel-slide current-slide">
+          <div class="developer-card">
+            <div class="photo-orbit">
+              <img src="paulo.jpg" alt="Paulo Stiphen" class="developer-photo" />
+              <div class="orbit"></div>
+            </div>
+            <div class="developer-info">
+              <h3>Paulo Stiphen and ChatGPT</h3>
+              <p>Criador do site SystemIN, responsável pelo design e estrutura geral do projeto.</p>
+            </div>
+          </div>
+        </li>
+
+        <!-- Slide 2 - Isabeli -->
+        <li class="carousel-slide">
+          <div class="developer-card">
+            <div class="photo-orbit">
+              <img src="isabeli.jpg" alt="Isabeli Ferreira" class="developer-photo" />
+              <div class="orbit"></div>
+            </div>
+            <div class="developer-info">
+              <h3>Isabeli Ferreira</h3>
+              <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
+            </div>
+          </div>
+        </li>
+
+        <!-- Slide 3 - Geovanna -->
+        <li class="carousel-slide">
+          <div class="developer-card">
+            <div class="photo-orbit">
+              <img src="geovanna.jpg" alt="Geovanna Kruger" class="developer-photo" />
+              <div class="orbit"></div>
+            </div>
+            <div class="developer-info">
+              <h3>Geovanna Kruger</h3>
+              <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <button class="carousel-btn next" aria-label="Próximo">&#8594;</button>
+
+    <div class="carousel-nav">
+      <button class="dot current-dot" aria-label="Slide 1"></button>
+      <button class="dot" aria-label="Slide 2"></button>
+      <button class="dot" aria-label="Slide 3"></button>
+    </div>
+  </div>
+</section>
+
+    
+
+    <!-- DOCUMENTAÇÃO -->
+    <section id="doc-card">
+      <h2>Documentação Completa</h2>
+      <p>Clique no botão para acessar a documentação completa do sistema</p>
+      <button id="go-to-doc">Ir para Documentação</button>
+    </section>
+
+  </div>
+
+  <!-- FLASH EXPLOSÃO -->
+  <div id="flash" class="flash" style="display: none;"></div>
+
+  <!-- RODAPÉ -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <p>&copy; 2025 SystemIN - Todos os direitos reservados.</p>
+      <p>Desenvolvido por <strong>SystemIN Dev Team</strong></p>
+    </div>
+  </footer>
 
   <script src="script1.js"></script>
 </body>
