--- a/documentacao.html
+++ b/documentacao.html
@@ -2,45 +2,67 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Documentação AulaSys</title>
+  <title>Documentação | SystemIN</title>
   <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-  <aside>
-    <h2>Documentação</h2>
-    <details open class="folder">
-      <summary class="negrito">ADMINISTRADOR</summary>
 
-      <details class="folder">
-        <summary>config</summary>
-        <div class="sub-item" data-id="navbar">NavBar</div>
-        <div class="sub-item" data-id="forms">Funcionalidades do Forms</div>
-      </details>
+  <div class="page-wrapper">
+    <!-- Botão hambúrguer -->
+    <button id="menu-toggle" class="hamburger">&#9776;</button>
 
-      <details class="folder">
-        <summary>turma</summary>
-        <div class="sub-item" data-id="turma-cadastrar">Cadastrar</div>
-        <div class="sub-item" data-id="turma-remover">Remover</div>
-        <div class="sub-item" data-id="turma-atualizar">Atualizar</div>
-      </details>
+    <!-- Menu lateral -->
+    <aside id="sidebar">
+      <div class="logo">
+        <img src="logo.png" alt="Logo AulaSys">
+        <h1>SystemIN Docs</h1>
+      </div>
 
-      <details class="folder">
-        <summary>Gerenciar Perfis</summary>
-        <div class="sub-item" data-id="perfil-editor">Adicionar outro perfil como editor</div>
-        <div class="sub-item" data-id="perfil-visu">Adicionar visualizador de planilhas</div>
-      </details>
-    </details>
-  </aside>
+      <nav>
+        <details open class="folder">
+          <summary class="negrito">ADMINISTRADOR</summary>
 
-  <!-- BOTÃO DE VOLTAR -->
-  <div style="margin: 1rem;">
-    <a href="index.html" class="botao-voltar">← Voltar à Página Inicial</a>
+          <details class="folder">
+            <summary>Config</summary>
+            <div class="sub-item" data-id="navbar">NavBar</div>
+            <div class="sub-item" data-id="forms">Funcionalidades do Forms</div>
+          </details>
+
+          <details class="folder">
+            <summary>Turma</summary>
+            <div class="sub-item" data-id="turma-cadastrar">Cadastrar</div>
+            <div class="sub-item" data-id="turma-remover">Remover</div>
+            <div class="sub-item" data-id="turma-atualizar">Atualizar</div>
+          </details>
+
+          <details class="folder">
+            <summary>Gerenciar Perfis</summary>
+            <div class="sub-item" data-id="perfil-editor">Adicionar outro perfil como editor</div>
+            <div class="sub-item" data-id="perfil-visu">Adicionar visualizador de planilhas</div>
+          </details>
+        </details>
+      </nav>
+    </aside>
+
+    <!-- BOTÃO DE VOLTAR -->
+    <div style="margin: 1rem;">
+      <a href="index.html" class="botao-voltar">←</a>
+    </div>
+
+    <!-- Conteúdo principal -->
+    <main id="conteudo">
+      <h1>Bem-vindo</h1>
+      <p>Selecione um item no menu para ver o conteúdo correspondente.</p>
+    </main>
   </div>
 
-  <main id="conteudo">
-    <h1>Bem-vindo</h1>
-    <p>Selecione um item no menu para ver o conteúdo correspondente.</p>
-  </main>
+  <!-- RODAPÉ -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <p>&copy; 2025 SystemIN - Todos os direitos reservados.</p>
+      <p>Desenvolvido por <strong>SystemIN Dev Team</strong></p>
+    </div>
+  </footer>
 
   <script src="script2.js"></script>
 </body>
