--- a/index.html
+++ b/index.html
@@ -10,21 +10,7 @@
 
   <!-- LOGOS GIRANDO AO FUNDO -->
   <div class="floating-logos">
-    <!-- 14 logos com diferentes delays -->
     <img src="logo.png" class="floating-logo" style="--i: 1;" />
-    <img src="logo.png" class="floating-logo" style="--i: 2;" />
-    <img src="logo.png" class="floating-logo" style="--i: 3;" />
-    <img src="logo.png" class="floating-logo" style="--i: 4;" />
-    <img src="logo.png" class="floating-logo" style="--i: 5;" />
-    <img src="logo.png" class="floating-logo" style="--i: 6;" />
-    <img src="logo.png" class="floating-logo" style="--i: 7;" />
-    <img src="logo.png" class="floating-logo" style="--i: 8;" />
-    <img src="logo.png" class="floating-logo" style="--i: 9;" />
-    <img src="logo.png" class="floating-logo" style="--i: 10;" />
-    <img src="logo.png" class="floating-logo" style="--i: 11;" />
-    <img src="logo.png" class="floating-logo" style="--i: 12;" />
-    <img src="logo.png" class="floating-logo" style="--i: 13;" />
-    <img src="logo.png" class="floating-logo" style="--i: 14;" />
   </div>
 
   <!-- CONTEÚDO PRINCIPAL -->
@@ -37,67 +23,36 @@
       <a href="#doc-card" class="scroll-down" aria-label="Scroll down"></a>
     </section>
 
-    <!-- NOVA SEÇÃO: DESENVOLVEDORES -->
-    <section id="developers" class="dev-section">
+<!-- NOVA SEÇÃO: DESENVOLVEDORES -->
+<section id="developers" class="dev-section">
   <h2 class="dev-title">Equipe de Desenvolvimento</h2>
 
-  <div class="carousel-container">
-    <button class="carousel-btn prev" aria-label="Anterior">&#8592;</button>
-
-    <div class="carousel-track-container">
-      <ul class="carousel-track">
-        <!-- Slide 1 - Paulo -->
-        <li class="carousel-slide current-slide">
-          <div class="developer-card">
-            <div class="photo-orbit">
-              <img src="paulo.jpg" alt="Paulo Stiphen" class="developer-photo" />
-              <div class="orbit"></div>
-            </div>
-            <div class="developer-info">
-              <h3>Paulo Stiphen and ChatGPT</h3>
-              <p>Criador do site SystemIN, responsável pelo design e estrutura geral do projeto.</p>
-            </div>
-          </div>
-        </li>
-
-        <!-- Slide 2 - Isabeli -->
-        <li class="carousel-slide">
-          <div class="developer-card">
-            <div class="photo-orbit">
-              <img src="isabeli.jpg" alt="Isabeli Ferreira" class="developer-photo" />
-              <div class="orbit"></div>
-            </div>
-            <div class="developer-info">
-              <h3>Isabeli Ferreira</h3>
-              <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
-            </div>
-          </div>
-        </li>
-
-        <!-- Slide 3 - Geovanna -->
-        <li class="carousel-slide">
-          <div class="developer-card">
-            <div class="photo-orbit">
-              <img src="geovanna.jpg" alt="Geovanna Kruger" class="developer-photo" />
-              <div class="orbit"></div>
-            </div>
-            <div class="developer-info">
-              <h3>Geovanna Kruger</h3>
-              <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
-            </div>
-          </div>
-        </li>
-      </ul>
+  <div class="developers-cards-container">
+    <!-- Card 1 -->
+    <div class="developer-card">
+      <img src="paulo.jpg" alt="Paulo Stiphen" class="developer-photo" />
+      <h3>Paulo Stiphen and ChatGPT</h3>
+      <p>Criador do site SystemIN, responsável pelo design e estrutura geral do projeto.</p>
     </div>
 
-    <button class="carousel-btn next" aria-label="Próximo">&#8594;</button>
+    <!-- Card 2 -->
+    <div class="developer-card">
+      <img src="isabeli.jpg" alt="Isabeli Ferreira" class="developer-photo" />
+      <h3>Isabeli Ferreira</h3>
+      <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
+    </div>
 
-    <div class="carousel-nav">
-      <button class="dot current-dot" aria-label="Slide 1"></button>
-      <button class="dot" aria-label="Slide 2"></button>
-      <button class="dot" aria-label="Slide 3"></button>
+    <!-- Card 3 -->
+    <div class="developer-card">
+      <img src="geovanna.jpg" alt="Geovanna Kruger" class="developer-photo" />
+      <h3>Geovanna Kruger</h3>
+      <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
     </div>
   </div>
+</section>
+
+   
+
 </section>
 
     
