--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SystemIN - Tela Inicial</title>
   <link rel="stylesheet" href="style1.css" />
 </head>
+
 <body>
 
   <!-- LOGOS GIRANDO AO FUNDO -->
@@ -18,44 +20,40 @@
 
     <!-- TELA HERO -->
     <section id="hero">
-      <h1>SystemIN Info</h1>
+      <h1 id="system-info-title">SystemIN Info</h1>
       <p>Descubra todas as funcionalidades do sistema de registro de aulas e presença</p>
+
+      <!-- Ícone de scroll agora fica logo abaixo do texto -->
       <a href="#doc-card" class="scroll-down" aria-label="Scroll down"></a>
     </section>
 
-<!-- NOVA SEÇÃO: DESENVOLVEDORES -->
-<section id="developers" class="dev-section">
-  <h2 class="dev-title">Equipe de Desenvolvimento</h2>
+    <!-- NOVA SEÇÃO: DESENVOLVEDORES -->
+    <section id="developers" class="dev-section">
+      <h2 class="dev-title">Equipe de Desenvolvimento</h2>
 
-  <div class="developers-cards-container">
-    <!-- Card 1 -->
-    <div class="developer-card">
-      <img src="paulo.jpg" alt="Paulo Stiphen" class="developer-photo" />
-      <h3>Paulo Stiphen and ChatGPT</h3>
-      <p>Criador do site SystemIN, responsável pelo design e estrutura geral do projeto.</p>
-    </div>
+      <div class="developers-cards-container">
+        <!-- Card 1 -->
+        <div class="developer-card">
+          <img src="paulo.jpg" alt="Paulo Stiphen" class="developer-photo" />
+          <h3>Paulo Stiphen</h3>
+          <p>Criador do site SystemIN, responsável pelo design e estrutura geral do projeto.</p>
+        </div>
 
-    <!-- Card 2 -->
-    <div class="developer-card">
-      <img src="isabeli.jpg" alt="Isabeli Ferreira" class="developer-photo" />
-      <h3>Isabeli Ferreira</h3>
-      <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
-    </div>
+        <!-- Card 2 -->
+        <div class="developer-card">
+          <img src="isabeli.jpg" alt="Isabeli Ferreira" class="developer-photo" />
+          <h3>Isabeli Ferreira</h3>
+          <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
+        </div>
 
-    <!-- Card 3 -->
-    <div class="developer-card">
-      <img src="geovanna.jpg" alt="Geovanna Kruger" class="developer-photo" />
-      <h3>Geovanna Kruger</h3>
-      <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
-    </div>
-  </div>
-</section>
-
-   
-
-</section>
-
-    
+        <!-- Card 3 -->
+        <div class="developer-card">
+          <img src="geovanna.jpg" alt="Geovanna Kruger" class="developer-photo" />
+          <h3>Geovanna Kruger</h3>
+          <p>Criadora do forms e responsável pela integração com banco de dados e planilha.</p>
+        </div>
+      </div>
+    </section>
 
     <!-- DOCUMENTAÇÃO -->
     <section id="doc-card">
@@ -79,4 +77,5 @@
 
   <script src="script1.js"></script>
 </body>
+
 </html>
